@@ -52,6 +52,7 @@ Cacti CHANGELOG
 -bug: Remove call pass by reference from function declarations
 -bug: When creating new graphs without a data source, print error to user instead of throwing php error
 -bug: Browser query string does not contain arguments
+-bug: inject_form_variables does not operate if more than 1 variable needs replacing
 -documentation: Remove sgml documentation.  See http://docs.cacti.net for Documentation
 -documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources
 -documentation: Documentation of specific rrdtool feature
